@@ -1,5 +1,16 @@
 2012-10-05  Robert Dewar  <dewar@adacore.com>
 
+	* sem_util.adb (Has_One_Matching_Field): Handle case of lone
+	discriminant.
+
+2012-10-05  Yannick Moy  <moy@adacore.com>
+
+	* checks.adb (Minimize_Eliminate_Overflow_Checks): Correct code
+	for the division operation and exponent operation. Adjust bound
+	for the mod and rem operations.
+
+2012-10-05  Robert Dewar  <dewar@adacore.com>
+
 	* checks.adb, checks.ads, s-tassta.adb, s-stposu.adb, s-spsufi.adb,
 	s-spsufi.ads, exp_ch4.adb: Minor reformatting.
 
